# dipralix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FORGE_v2_Native_Features_Masterplan.md  README.md  SECURITY.md  alive_Script.txt  demo.sh  deny.toml  install.ps1  install.sh  release.sh
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dipralix-ci.yml  release-binaries.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
backend/src/: main.rs
benchmark/: bug_fix.rs  feature_implementation.rs
docs/: gemini-migration.md  wasm-plugin-api.md
ide/vscode/: .gitignore  README.md  package-lock.json  package.json
ide/vscode/src/: extension.ts
site/: package-lock.json  package.json
site/src/components/3d/: DipralixCanvas.svelte  DipralixScene.svelte  DnaScene.svelte
site/src/components/ui/: Analytics.svelte  DnaSidebar.svelte  LiveStats.svelte  SafetyEditor.svelte  SecuritySimulator.svelte  Terminal.svelte
site/src/layouts/: Layout.astro
site/src/lib/: events.ts
site/src/pages/: arena.astro  dna.astro  docs.astro  index.astro  security.astro
site/src/styles/: global.css
src/: agent.rs  alive.rs  approval.rs  ast.rs  audit.rs  backend.rs  browser.rs  ci_runner.rs  comment_protocol.rs  config.rs  context.rs  debate.rs  diff_view.rs  domain_bootstrap.rs  domain_knowledge.rs  ember.rs  evolve.rs  fingerprint.rs  infra.rs  learning.rs  ledger.rs  lib.rs  living_docs.rs  main.rs  mcp.rs  memory.rs  models.rs  orchestrator.rs  packer.rs  plan_visualizer.rs  project.rs  resume.rs  safety.rs  security.rs  session.rs  snapshot.rs  test_harness.rs  token_counter.rs  tools.rs  types.rs  (+2 more)
src/integrations/: discord.rs  github.rs  google.rs  mod.rs  notion.rs  slack.rs
src/sync/: allowlist.rs  chat.rs  client.rs  crypto.rs  discovery.rs  error.rs  fileio.rs  mesh.rs  mod.rs  presence.rs  protocol.rs  store.rs  watcher.rs
src/ui/: nullvoid.rs
tests/: approval_quorum.rs  sync_integration.rs
