[package]
name = "dipralix"
version = "0.1.0"
edition = "2021"
description = "Multi-model terminal AI coding agent — dipralix code with any model"
authors = ["pratikacharya1234"]

[[bin]]
name = "dipralix-cli"
path = "src/main.rs"

[[bin]]
name = "dipralix-server"
path = "src/bin/server.rs"

[features]
default = []
ember = ["cpal", "hound"]

[dependencies]
tokio        = { version = "1",    features = ["full"] }
reqwest      = { version = "0.11", features = ["json", "stream"] }
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
colored      = "2"
rustyline    = "14"
clap         = { version = "3",    features = ["derive", "env"] }
anyhow       = "1"
dirs         = "5"
walkdir      = "2"
regex        = "1"
futures-util = "0.3"
glob         = "0.3"
base64       = "0.22"
toml         = "0.8"
similar      = "2"
uuid         = { version = "1", features = ["v4"] }
chrono = "0.4.38"
cpal = { version = "0.15", optional = true }
hound = { version = "3.5", optional = true }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
thiserror = "1"
notify = "6"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"
async-trait = "0.1"

[dev-dependencies]
futures      = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
libc         = "0.2"
tracing      = "0.1"
