[package]
name        = "dipralix-stats"
version     = "0.1.0"
edition     = "2021"
description = "Live stats backend for the Dipralix site — stars, forks, downloads, visits."
license     = "MIT"

[[bin]]
name = "dipralix-stats"
path = "src/main.rs"

[dependencies]
anyhow      = "1"
axum        = "0.7"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tower-http  = { version = "0.5", features = ["cors", "trace"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
parking_lot = "0.12"

[profile.release]
opt-level = "z"
lto       = true
codegen-units = 1
strip     = true
